# dns-server

./: .gitignore  Cargo.toml  README.md  helloasdfd.txt  query_packet.txt  records.json  response_packet.txt
src/: answer.rs  buffer.rs  header.rs  main.rs  message.rs  packet.rs  query.rs  question.rs  record.rs  resultcode.rs  utils.rs
