[package]
name = "dns-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
deku = "0.16.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = "1.37.0"
